[tool.poetry]
name = "omenv"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
readme = "README.md"
packages = [
    { include = "build.py" },
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
