[tool.poetry]
name = "omenv"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ombuild.py" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pyproject-flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.flake8]
exclude = '.venv,.git'
max-line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
